--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 :root {
   --gray: #707070;
+  --gray-light: #7070701f;
   --white: #FFF;
   --energy: #F99C33;
   --info: #3390f9;
@@ -40,6 +41,10 @@ code {
   padding: 15px 0;
 }
 
+h1, h2, h3, h4, h5 {
+  font-weight: bold;
+}
+
 /* Elements */
 
   /* -- Boxes */
@@ -67,6 +72,7 @@ code {
       text-transform: uppercase;
       font-weight: bold;
       font-size: 20px;
+      color: var(--info);
     }
     
     /* Box Certifier*/
@@ -93,9 +99,10 @@ code {
       text-transform: uppercase;
       font-weight: bold;
       font-size: 20px;
+      color: var(--info);
     }
 
-    .box-knowledge__subtitle::before {
+    /* .box-knowledge__subtitle::before {
       content: "";
       position: relative;
       top: -12px;
@@ -112,7 +119,19 @@ code {
       top: 12px;
       border-bottom: 2px solid rgba(0,0,0,.1);
       margin-left: 15px;
-      /* width: 25%; */
+      width: 25%;
+    } */
+
+    .box-knowledge .row:last-child {
+      padding-bottom: 0;
+    }
+
+    .box-knowledge .row:last-child .table-responsive:last-child table{
+      padding-bottom: 0;
+    }
+
+    .box-knowledge .row:last-child .table-responsive:last-child table tbody:last-child tr:last-child td{
+      padding-bottom: 0;
     }
 
   /* -- Fonts */
@@ -182,45 +201,61 @@ code {
 /* Modifies */
 
   .--no-padding {
-    padding: 0;
+    padding: 0 !important;
   }
 
   .--no-padding-left-right {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
   }
 
   .--no-padding-top-bottom {
-    padding-top: 0;
-    padding-bottom: 0;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
   }
 
   .--no-padding-top {
-    padding-top: 0;
+    padding-top: 0 !important;
   }
 
   .--no-padding-bottom {
-    padding-bottom: 0;
+    padding-bottom: 0 !important;
   }
 
   .--no-padding-left {
-    padding-left: 0;
+    padding-left: 0 !important;
   }
 
   .--no-padding-right {
-    padding-right: 0;
+    padding-right: 0 !important;
   }
 
   .--no-margin {
-    margin: 0;
+    margin: 0 !important;
   }
 
   .--no-margin-left-right {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
 
   .--no-margin-top-bottom {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+
+  .--no-margin-top {
+    margin-bottom: 0 !important;
+  }
+
+  .--no-margin-bottom {
+    margin-bottom: 0 !important;
+  }
+
+  .--no-margin-left {
+    margin-bottom: 0 !important;
+  }
+
+  .--no-margin-right {
+    margin-bottom: 0 !important;
   }
