--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,12 @@ code {
   padding: 15px 0;
 }
 
+@media all and (max-width: 480px) {
+  h1 {
+    font-size: 36px;
+  }
+}
+
 h1, h2, h3, h4, h5 {
   font-weight: bold;
 }
@@ -101,7 +107,7 @@ h1, h2, h3, h4, h5 {
 
     .box-knowledge__subtitle::after {
       content: '';
-      border-bottom: 1px solid var(--gray-light);
+      border-bottom: 1px solid var(--info);
       position: absolute;
       top: 50%;
       left: 0;
@@ -130,16 +136,26 @@ h1, h2, h3, h4, h5 {
     .box-experiences__div__subtitle {
       margin-bottom: 15px;
       margin-left: -15px;
+      margin-top: 15px;
     }
 
     .box-experiences__subtitle {
       color: var(--info);
       background-color: var(--white);
-      position: relative;
       line-height: 32px;
       display: inline;
-      top: 10px;
+      padding-right: 15px;
+    }
+
+    .box-experiences__subtitle::before {
+      content: '';
+      border-bottom: 1px solid var(--info);
+      position: absolute;
+      top: 50%;
       left: 0;
+      width: calc(100% - 15px);
+      z-index: -1;
+      margin-left: 15px;
     }
 
     .box-experiences__content {
@@ -153,7 +169,8 @@ h1, h2, h3, h4, h5 {
 
     .box-experiences__divider {
       margin-left: -15px;
-      padding: 7px;
+      padding-left: 15px;
+      border-color: var(--info);
     }
 
     /* Box Label */
@@ -202,6 +219,9 @@ h1, h2, h3, h4, h5 {
   /* Hr */
     hr {
       width: 100%;
+      margin-left: 15px;
+      margin-right: 15px;
+      border-color: var(--info);
     }
   
   /* Table */
@@ -236,6 +256,8 @@ h1, h2, h3, h4, h5 {
       float: left;
       color: var(--info);
       background-color: var(--white);
+      position: relative;
+      top: -7px;
     }
 
   /* Buttons */
@@ -322,7 +344,7 @@ h1, h2, h3, h4, h5 {
   }
 
   .--no-margin-top {
-    margin-bottom: 0 !important;
+    margin-top: 0 !important;
   }
 
   .--no-margin-bottom {
@@ -330,11 +352,11 @@ h1, h2, h3, h4, h5 {
   }
 
   .--no-margin-left {
-    margin-bottom: 0 !important;
+    margin-left: 0 !important;
   }
 
   .--no-margin-right {
-    margin-bottom: 0 !important;
+    margin-right: 0 !important;
   }
 
   .--no-list-style {
