--- a/src/index.css
+++ b/src/index.css
@@ -269,34 +269,43 @@ h1, h2, h3, h4, h5 {
 /* Colors */
 
   /* -- Backgrounds */
-  .bg--energy {
-    background-color: var(--energy);
-  }
+    .bg--energy {
+      background-color: var(--energy);
+    }
 
-  .bg--info {
-    background-color: var(--info);
-  }
+    .bg--info {
+      background-color: var(--info);
+    }
 
-  .bg--success {
-    background-color: var(--success);
-  }
+    .bg--success {
+      background-color: var(--success);
+    }
 
-  .bg--danger {
-    background-color: var(--danger);
-  }
+    .bg--danger {
+      background-color: var(--danger);
+    }
 
-  .bg--elixir {
-    background-color: var(--elixir);
-  }
+    .bg--elixir {
+      background-color: var(--elixir);
+    }
 
-  .bg--spark {
-    background-color: var(--spark);
-  }
+    .bg--spark {
+      background-color: var(--spark);
+    }
 
   /* -- Texts */
-  .text--white {
-    color: var(--white);
-  }
+    .text--white {
+      color: var(--white);
+    }
+
+  /* -- borders */
+    .border--white {
+      border-color: var(--white);
+    }
+
+    .border--gray {
+      border-color: var(--gray);
+    }
 
 /* Modifies */
 
